{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 463,
  "lineage": "f307eec6-96af-4e21-2cd4-464f186a89ff",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mediawiki",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dd0ccab7e2801812",
            "arn": "arn:aws:ec2:us-east-2:100182862103:instance/i-09d93c862aeaceab0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d93c862aeaceab0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "instanceprivatekey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf5ed74bb41bf9ec",
            "private_dns": "ip-10-0-1-70.us-east-2.compute.internal",
            "private_ip": "10.0.1.70",
            "public_dns": "ec2-18-222-128-5.us-east-2.compute.amazonaws.com",
            "public_ip": "18.222.128.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e7b8341abfbe2ee9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07846bd8d24d126d2",
            "tags": {
              "Name": "Ter"
            },
            "tags_all": {
              "Name": "Ter"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09255c116fe105ea7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_22",
            "aws_subnet.subnet_public-2",
            "aws_vpc.vpc",
            "data.http.my_public_ip",
            "aws_key_pair.mykey"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100182862103:internet-gateway/igw-031342d991d3d8e9d",
            "id": "igw-031342d991d3d8e9d",
            "owner_id": "100182862103",
            "tags": {
              "Name": "Ter"
            },
            "tags_all": {
              "Name": "Ter"
            },
            "vpc_id": "vpc-04fe9dc83040786b4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100182862103:route-table/rtb-05899d4c5b9954de6",
            "id": "rtb-05899d4c5b9954de6",
            "owner_id": "100182862103",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031342d991d3d8e9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ter"
            },
            "tags_all": {
              "Name": "Ter"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fe9dc83040786b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bd9ddeb8f1164e0",
            "route_table_id": "rtb-05899d4c5b9954de6",
            "subnet_id": "subnet-078d5144e339842ef"
          },
          "dependencies": [
            "aws_subnet.subnet_public-1",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0572cc81b9d4c30d2",
            "route_table_id": "rtb-05899d4c5b9954de6",
            "subnet_id": "subnet-07846bd8d24d126d2"
          },
          "dependencies": [
            "aws_subnet.subnet_public-2",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100182862103:security-group/sg-09255c116fe105ea7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-09255c116fe105ea7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "117.207.251.255/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "100182862103",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fe9dc83040786b4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.my_public_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100182862103:subnet/subnet-078d5144e339842ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/26",
            "id": "subnet-078d5144e339842ef",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "100182862103",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-04fe9dc83040786b4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100182862103:subnet/subnet-07846bd8d24d126d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.64/28",
            "id": "subnet-07846bd8d24d126d2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "100182862103",
            "tags": {
              "Name": "subnet-2"
            },
            "tags_all": {
              "Name": "subnet-2"
            },
            "vpc_id": "vpc-04fe9dc83040786b4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:100182862103:vpc/vpc-04fe9dc83040786b4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ba8a5d262274ba2",
            "default_route_table_id": "rtb-0c26a44b34b81b1a1",
            "default_security_group_id": "sg-02f430e45a8f43415",
            "dhcp_options_id": "dopt-f3364898",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04fe9dc83040786b4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c26a44b34b81b1a1",
            "owner_id": "100182862103",
            "tags": {
              "Name": "Ter"
            },
            "tags_all": {
              "Name": "Ter"
            }
          }
        }
      ]
    }
  ]
}